# actix_web_starter

./: .ignore  Cargo.toml  README.md
pages/: 404.html  form.html  index.html  login.html  register.html
src/: main.rs
src/services/: config.rs
src/services/handler/: error.rs  mod.rs  response.rs  user.rs  v1.rs  v2.rs
static/css/: register_login.css
web_service/: Cargo.toml
