[package]
name = "actix-web-starter"
version = "0.1.0"
edition = "2021"
authors = ["ShineShao <xiaoshaoqq@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
actix-files = "0.6.0"

